--- a/src/app/area02/area02.component.html
+++ b/src/app/area02/area02.component.html
@@ -1,7 +1,5 @@
 <div class="area02">
-  <ul>
-    <li [class]="item-card" *ngFor="let card of arrayCards">{{ card }}
-      <img src="{{ card }}" />
-    </li>
-  </ul>
+    <div [ngClass]='"img-block"' *ngFor="let card of arrayCards">
+      <img [ngClass]='"img-card"' src="./assets/images/{{ card }}" />
+    </div>
 </div>
