--- a/src/app/area01/area01.component.css
+++ b/src/app/area01/area01.component.css
@@ -1,7 +1,5 @@
 .area01 {
     height: 300px;
-    border-color: #00a136;
-    border-width: 2px;
-    border-style: solid;
+    background-color: #00a136;
     margin-bottom: 10px;
 }
