--- a/src/app/area02/area02.component.css
+++ b/src/app/area02/area02.component.css
@@ -4,21 +4,18 @@
     flex-wrap: wrap;
     height: 210px;
     overflow: scroll;
-    margin: 0;
+    margin: 0 0 15px 0;
     padding: 10px;
+    border-top-color: #707070;
+    border-top-style: solid;
+    border-top-width: 1px;
+    background-color: #a3a3a3;
 }
 
 .img-block {
-  margin: 5px;
+    margin: 5px;
 }
 
 .img-card {
-     width: 100px;
- }
-
-.area02 {
-    border-top-color: #c00000;
-    border-top-style: solid;
-    border-top-width: 1px;
-    margin-bottom: 15px;
- }
+    width: 100px;
+}
