--- a/src/app/area02/area02.component.html
+++ b/src/app/area02/area02.component.html
@@ -1,9 +1,5 @@
-<div class="area02">
-        <div [ngClass]='"img-block"' *ngFor="let card of arrayCards">
-          <img [ngClass]='"img-card"' src="./assets/images/{{ card }}" />
-        </div>
-</div>
-<p-accordion>
+==============================
+<!-- <p-accordion>
     <p-accordionTab header="Godfather I" [selected]="true">
         The story begins as Don Vito Corleone, the head of a New York Mafia family, overseeshis daughter's wedding. His beloved son ichael has just come home from the war, but does not intend to become part of his father's business. T hrough Michael's life the nature of the family business becomes clear. The business of the family is just like the head of the family, kind and benevolent to those who give respect, but given to ruthless violence whenever anything stands against the good of the family.
     </p-accordionTab>
@@ -13,4 +9,12 @@
     <p-accordionTab header="Godfather III">
         After a break of more than  15 years, director Francis Ford Coppola and writer Mario Puzo returned to the well for this third and final story of the fictional Corleone crime family. Two decades have passed, and crime kingpin Michael Corleone, now divorced from his wife Kay has nearly succeeded in keeping his promise that his family would one day be completely legitimate.
     </p-accordionTab>
-</p-accordion>
+</p-accordion> -->
+==============================
+<div class="area02">
+        <div [ngClass]='"img-block"' *ngFor="let card of arrayCards">
+          <img [ngClass]='"img-card"' src="./assets/images/{{ card }}" />
+        </div>
+</div>
+
+
