--- a/src/app/area02/area02.component.html
+++ b/src/app/area02/area02.component.html
@@ -1,18 +1,16 @@
-<p-panel header="Набор асоциативных карт 1" [collapsed]="false" [toggleable]="true">
+
+
+<p-panel header="Набор асоциативных карт 2" [collapsed]="false" [toggleable]="true">
+    <div class="accordion-block-content">
+            <img [ngClass]='"img-card"' *ngFor="let card of arrayCards" src="./assets/images/{{ card }}" pDraggable="carsZone" (onDragStart)="dragStart($event)" (onDrag)="drag($event)" (onDragEnd)="dragEnd($event)" />
+    </div>
+</p-panel>
+
+<p-panel header="Набор асоциативных карт 1" [collapsed]="true" [toggleable]="true">
 <div class="accordion-block-content">
-    <div [ngClass]='"img-block"' *ngFor="let card of arrayCards">
+    <div [ngClass]='"img-block"' *ngFor="let card of arrayCards" pDraggable="carsZone" (onDragStart)="dragStart($event)" (onDrag)="drag($event)" (onDragEnd)="dragEnd($event)">
         <img [ngClass]='"img-card"' src="./assets/images/{{ card }}" />
     </div>
 </div>
 </p-panel>
-
-<p-panel header="Набор асоциативных карт 2" [collapsed]="true" [toggleable]="true">
-    <div class="accordion-block-content">
-        <div [ngClass]='"img-block"' *ngFor="let card of arrayCards">
-            <img [ngClass]='"img-card"' src="./assets/images/{{ card }}" />
-        </div>
-    </div>
-</p-panel>
-
-
 
