добавлена возможность работы со словами

--- a/src/app/area01/area01.component.css
+++ b/src/app/area01/area01.component.css
@@ -1,5 +1,6 @@
 .area01 {
-    height: 300px;
-    background-color: #00a136;
+/*     height: 700px; */
+    height: 80vh;
+    background-color: #90f3b1;
     margin-bottom: 10px;
 }
