--- a/src/app/area02/area02.component.css
+++ b/src/app/area02/area02.component.css
@@ -18,7 +18,7 @@
 }
 .img-card:hover {
     box-shadow: 0 0 10px rgba(0,0,0,0.5);
-    cursor: pointer;
+/*     cursor: pointer; */
 }
 .word-block {
     display: inline-block;
