--- a/src/app/area02/area02.component.html
+++ b/src/app/area02/area02.component.html
@@ -6,7 +6,7 @@
     </div>
 -->
     <div class="accordion-block-content">
-        <div class="hidden-button">
+        <div class="button-block">
             <button pButton type="button" class="ui-button-info" label="Скрыть карты" (click)="hideCardImage()"></button>
             <button pButton type="button" class="ui-button-info" label="Окрыть карты" (click)="showCardImage()"></button>
         </div>
