--- a/src/app/area02/area02.component.html
+++ b/src/app/area02/area02.component.html
@@ -11,7 +11,7 @@
             <button pButton type="button" class="ui-button-info" label="Окрыть карты" (click)="showCardImage()"></button>
         </div>
         <div [ngClass]='"img-block"' *ngFor="let card of arrayCards" pDraggable="carszone" (onDragStart)="dragStart($event)" (onDrag)="drag($event)" (onDragEnd)="dragEnd($event)" (click)="onClick($event)">
-            <img [ngClass]='"img-card"' src="./assets/images/{{ card }}" />
+            <img [ngClass]='"img-card"' src="./assets/images/{{ card }}" alt="./assets/images/hidden.png"/>
         </div>
     </div>
 </p-panel>
