--- a/src/app/area02/area02.component.html
+++ b/src/app/area02/area02.component.html
@@ -5,13 +5,13 @@
         <img [ngClass]='"img-card"' *ngFor="let card of arrayCards" src="./assets/images/{{ card }}" dragEffect="linkMove" pDraggable="carszone" (onDragStart)="dragStart($event)" (onDrag)="drag($event)" (onDragEnd)="dragEnd($event)" (click)="onClick($event)"/>
     </div>
 -->
-    <div class="accordion-block-content">
+    <div class="accordion-block-content block1">
         <div class="button-block">
-            <button pButton type="button" class="ui-button-info" label="Скрыть карты" (click)="hideCardImage('block1')"></button>
-            <button pButton type="button" class="ui-button-info" label="Окрыть карты" (click)="showCardImage()"></button>
-<!--             <p-inputSwitch onLabel="Открыть" offLabel="Скрыть" [(ngModel)]="checkedStatus" (onChange)="handleChange($event)"></p-inputSwitch> -->
+            <button pButton type="button" class="ui-button-info" label="Скрыть карты" (click)="hideShowImage('block1')"></button>
+            <button pButton type="button" class="ui-button-info" label="Окрыть карты" (click)="hideShowImage('block1')"></button>
+            <p-inputSwitch onLabel="Открыть" offLabel="Скрыть" [(ngModel)]="checkedStatus" (onChange)="handleChange($event)"></p-inputSwitch>
         </div>
-        <div [ngClass]='"img-block block1"' *ngFor="let card of arrayCards" pDraggable="carszone" (onDragStart)="dragStart($event)" (onDrag)="drag($event)" (onDragEnd)="dragEnd($event)" (click)="onClick($event)">
+        <div [ngClass]='"img-block"' *ngFor="let card of arrayCards" pDraggable="carszone" (onDragStart)="dragStart($event)" (onDrag)="drag($event)" (onDragEnd)="dragEnd($event)" (click)="onClick($event)">
             <img [ngClass]='"img-card"' src="./assets/images/{{ card }}" alt="./assets/images/hidden.png"/>
         </div>
     </div>
