добавлено поле textarea с созможностью перемещать

--- a/src/app/area01/area01.component.css
+++ b/src/app/area01/area01.component.css
@@ -4,3 +4,16 @@
     background-color: #90f3b1;
     margin-bottom: 10px;
 }
+.text-area {
+    display: inline-block;
+}
+.text-area  textarea {
+    max-width: 200px !important;
+}
+.header {
+    height:20px;
+    background-color: #74c0ff;
+}
+.moved {
+    position: absolute;
+}
