добавление элемента двойным кликом

--- a/src/app/area01/area01.component.html
+++ b/src/app/area01/area01.component.html
@@ -5,4 +5,12 @@
         </div>
         <textarea [rows]="2" [cols]="10" pInputTextarea ></textarea>
     </div>
+    <div class="insertZone" style="height: 50px; background:red">
+    </div>
 </div>
+
+    <div class="tmpl">
+        <p>
+            QWERTY!!!
+        </p>
+    </div>
