--- a/src/app/area01/area01.component.html
+++ b/src/app/area01/area01.component.html
@@ -1,6 +1,6 @@
-<div class="area01" pDroppable="carszone" (dblclick)="addTextAreaBlock($event)">
+<div class="area01" id="dropZone" pDroppable="carszone">
     <div class="text-area" pDraggable="carszone" (onDragStart)="dragStart($event)" (onDrag)="drag($event)" (onDragEnd)="dragEnd($event)" >
-        <div class="header" (click)="removeTextAreaBlock($event)">
+        <div class="header" (click)="onCkick($event)">
             
         </div>
         <textarea [rows]="2" [cols]="10" pInputTextarea ></textarea>
@@ -9,8 +9,3 @@
     </div>
 </div>
 
-    <div class="tmpl">
-        <p>
-            QWERTY!!!
-        </p>
-    </div>
