добавлена возможность создавать блоки с произвольным текстом

--- a/src/app/area01/area01.component.html
+++ b/src/app/area01/area01.component.html
@@ -1,9 +1,13 @@
 <div class="area01" id="dropZone" pDroppable="carszone">
-    <div class="text-area" pDraggable="carszone" (onDragStart)="dragStart($event)" (onDrag)="drag($event)" (onDragEnd)="dragEnd($event)" >
-        <div class="header" (click)="onCkick($event)">
-            
-        </div>
-        <textarea [rows]="2" [cols]="10" pInputTextarea ></textarea>
-    </div>
+<!--     <input (change)="addInput($event)"> -->
+    <input id="input" type="text" size="30" pInputText (change)="addInput($event)">
+
+    <ul>
+        <li class="text-area" pDraggable="carszone" (onDragStart)="dragStart($event)" (onDrag)="drag($event)" (onDragEnd)="dragEnd($event)" *ngFor="let item of inputArray">
+            <div class="header" (click)="onCkick($event)">
+            </div>
+            <textarea [rows]="2" [cols]="10" pInputTextarea >{{ item }}</textarea>
+        </li>
+    </ul>
 </div>
 
