--- a/src/app/area01/area01.component.css
+++ b/src/app/area01/area01.component.css
@@ -3,6 +3,12 @@
     height: 80vh;
     background-color: #90f3b1;
     margin-bottom: 10px;
+    position: relative;
+}
+.buttonSidebar {
+    position: absolute;
+    bottom: 0;
+    left:0;
 }
 .text-area {
     display: inline-block;
